--- a/Prototypes/TestingWatch3/wear/src/main/AndroidManifest.xml
+++ b/Prototypes/TestingWatch3/wear/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:value="true" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".HeartActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,6 +33,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".HeartBeatService"/>
     </application>
 
 </manifest>
